# Cafe.TextUtils

./: CMakeLists.txt  Readme.md  conanfile.py
Format/: CMakeLists.txt
Format/include/Cafe/TextUtils/: Format.h
Format/src/Cafe/TextUtils/: Format.h
Misc/: CMakeLists.txt
Misc/include/Cafe/TextUtils/: CodePointIterator.h  Misc.h
Misc/src/: Misc.cpp
Misc/src/Cafe/TextUtils/: CodePointIterator.h  Misc.h
StreamHelper/: CMakeLists.txt
StreamHelper/include/Cafe/TextUtils/: TextReader.h  TextWriter.h
StreamHelpers/: CMakeLists.txt
StreamHelpers/include/Cafe/TextUtils/: TextWriter.h
StreamHelpers/src/Cafe/TextUtils/: TextReader.h  TextWriter.h
Test/: CMakeLists.txt  Format.Test.cpp  Misc.Test.cpp  StreamHelper.Test.cpp  StreamHelpers.Test.cpp
